# qa-book

./: .gitignore  .travis.yml  CNAME  README.md  SUMMARY.md  book.json  hello_tensorflow.py  index.html  search_plus_index.json
ai/algorithm_and_data_structure/: beginning.md  heapq_case1.py  priority_queue.md
ai/keras/: beginning.html
ai/math/: arrangement_and_combination.html  arrangement_and_combination.md  beginning.html  beginning.md  binary.html  binary.md  dynamic_programming.html  dynamic_programming.md  iterative.html  iterative.md  mathematical_induction.html  mathematical_induction.md  rcursion.html  rcursion.md  remainder.html  remainder.md
ai/paddle/: beginning.html  tensor.html  tensor.md
ai/python/: beginning.html  matplotlib.html  numpy.html  pandas.html  scipy.html  seaborn.html
ai/tensorflow/: artitecture.html  artitecture.md  beginning.html  beginning.md  concept.html  concept.md  install.html  install.md  mnist_practice.html  mnist_practice.md  predict_house_price.html  predict_house_price.md  tensorboard.html  tensorboard.md
auvideo/stream_practice/: beginning.html  beginning.md  rtsp.html  rtsp.md
ci/teamcity/: beginning.html  beginning.md  install.html  install.md
cloud-native/docker/: beginning.html
cloud-native/helm/: beginning.html
cloud-native/kt-env/: action.html  action.md  basic.html  basic.md  beginning.html  (+7 more)
src/: test
src/language/cmake/tutorial/step1/final/: CMakeLists.txt  tutorial.cxx
src/language/cmake/tutorial/step4/final/MathFunctions/: CMakeLists.txt
src/language/cmake/tutorial/step6/final/MathFunctions/: CMakeLists.txt  mysqrt.cxx
(+315 files in other folders)
